--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 3.x  # Change to your required Flutter version
+          flutter-version: 3.24.5
           channel: stable
 
       - name: Install Dependencies
