--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 3.24.5  # Change to your required Flutter version
+          flutter-version: 3.24.5  
           channel: stable
 
       - name: Install Dependencies
@@ -38,7 +38,7 @@ jobs:
 
       - name: Upload APK to GitHub Releases
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           LATEST_TAG=$(date +'%Y.%m.%d-%H%M%S')
           gh release create "$LATEST_TAG" build/app/outputs/flutter-apk/app-release.apk --title "Release $LATEST_TAG" --notes "Latest APK release" --prerelease || echo "Release already exists"
@@ -46,6 +46,6 @@ jobs:
       - name: Deploy Web to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.TOKEN }}
+          personal_token: ${{ secrets.TOKEN }}
           publish_branch: gh-pages
           publish_dir: build/web
