--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,9 +51,6 @@ jobs:
       - name: Build appBundle
         run: flutter build appbundle
 
-      - name: Build IPA
-        run: flutter build ipa --no-codesign
-
       - name: Build Web Release
         run: flutter build web
 
@@ -64,12 +61,11 @@ jobs:
           path: |
             build/app/outputs/flutter-apk/app-release.apk
             build/app/outputs/bundle/release/app-release.aab
-            build/ios_build.tar.gz
 
       - name: Extract version from pubspec.yaml
         id: extract_version
         run: |
-          version=$(grep '^version: ' pubspec.yaml | awk '{print $2}' | sed 's/\r//g' | sed 's/\n//g')
+          version=$(grep '^version: ' pubspec.yaml | awk '{print $2}' | tr -d '\r\n')
           echo "VERSION=$version" >> $GITHUB_ENV
 
       - name: Check if Tag Exists
@@ -91,7 +87,7 @@ jobs:
       - name: Create Release
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/flutter-apk/app-release.apk,build/app/outputs/bundle/release/app-release.aab,build/ios_build.tar.gz"
+          artifacts: "build/app/outputs/flutter-apk/app-release.apk,build/app/outputs/bundle/release/app-release.aab"
           tag: v${{ env.VERSION }}
           token: ${{ secrets.TOKEN }}
 
@@ -101,8 +97,6 @@ jobs:
           git reset --hard
           git commit --allow-empty -m "Initialize gh-pages" || echo "Branch already exists"
           git push --set-upstream origin gh-pages
-          git commit --allow-empty -m "Initialize gh-pages branch" || echo "Branch already exists"
-          git push origin gh-pages || echo "Branch already exists"
 
       - name: Commit and Push Web Build
         run: |
